--- a/scripts/07_explore_network_stats.Rmd
+++ b/scripts/07_explore_network_stats.Rmd
@@ -20,7 +20,9 @@ fontsize: 11pt
 
 # Description
 
-Check for a correlation between network size (node count) and network statistics, to determine whether network size needs to be incorporated into the generalized linear models (GLMs). Produce Supplementary Figures that show network statistic change through time. 
+First, group fishing communities (port groups) into regions, according to an NMDS cluster analysis.
+
+Then prepare for generalized linear models (GLMs). Check for a correlation between network size (node count) and network statistics, to determine whether network size needs to be incorporated into the GLMs. Do some pre-model visualization; graph network statistics through time and across closure durations (this will produce Figures S2-S4).
 
 The three core network metrics are: 
 
@@ -47,12 +49,16 @@ This script requires the following packages.
 ```{r packages, message=FALSE, warning=FALSE}
 if(!require("tidyverse")) {install.packages("tidyverse")}
 if(!require("foreign")) {install.packages("foreign")}
+if(!require("lubridate")) {install.packages("lubridate")}
+if(!require("vegan")) {install.packages("vegan")}
+if(!require("labdsv")) {install.packages("labdsv")}
 if(!require("plotrix")) {install.packages("plotrix")}
 if(!require("facetscales")) {devtools::install_github("zeehio/facetscales"); library(facetscales)}
 if(!require("ggplot2")) {install.packages("ggplot2")}
-if(!require("grid")) {install.packages("grid")}
+if(!require("ggord")) {devtools::install_github("fawda123/ggord"); library(facetscales)}
 if(!require("gridExtra")) {install.packages("gridExtra")}
 if(!require("cowplot")) {install.packages("cowplot")}
+if(!require("PNWColors")) {devtools::install_github("jakelawler/PNWColors"); library(PNWColors)}
 ```
 <br>
 
@@ -74,8 +80,9 @@ filename <- "2008_2017_CA_ParticipationNetworkMetrics.csv"
 ```
 <br>
 
-Specify which network statistics to retain from the full data set.
+Specify which network statistics to retain from the full data set for the NMDS, and for the GLMs. The NMDS variables should include either all or a subset of the variables that will be used in the GLMs
 ```{r}
+nmds_vars <- c("ed","nc_weighted","m_weighted")
 myvars <- c("mean_deg","ed","nc","nc_weighted","m","m_weighted")
 ```
 <br>
@@ -102,8 +109,161 @@ head(delays)
 ```
 <br>
 
+# 2. NMDS
 
-# 2: Spearman Rank Correlation Test
+The non-metric multidimensional scaling (NMDS) ordination will collapse port group information from many network metrics into a 2D visualization. Since NMDS uses rank orders, we don't have to make any assumptions about the nature of the network metrics data. The goal for the NMDS is to evaluate the regional designations of each port group, particularly Bodega Bay. Although Bodega Bay is technically within the central California management area for the commercial Dungeness crab fishery, for the purpose of some analyses it has been considered part of northern California. 
+
+Subset the stats data for the NMDS variables, and for observations (port group / year / season combinations) which have complete data.
+```{r}
+nmds_stats <- stats %>%
+  dplyr::select(pcgroup, y, period, all_of(nmds_vars)) %>%
+  filter_at(vars(all_of(nmds_vars)), all_vars(!is.na(.)))
+```
+<br>
+
+NMDS analyses will be done separately for the early and late seasons. 
+```{r}
+nmds_stats_early <- filter(nmds_stats, period=="early")
+nmds_stats_late <- filter(nmds_stats, period=="late")
+```
+<br>
+
+## 2.1 Early Season
+
+Relativize the network metrics by range, and run the `metaMDS` function.
+```{r}
+nmds_stats_early.r <- decostand(nmds_stats_early[4:ncol(nmds_stats_early)], method="range",MARGIN=2)
+early.nmds <- metaMDS(comm=nmds_stats_early.r,autotransform=FALSE,distance="euclidean")
+```
+```{r echo=FALSE}
+stressplot(early.nmds)
+```
+**The stress is:`r round(early.nmds$stress,5)`**
+<br>
+
+
+## 2.2. Late Season
+
+Relativize the network metrics by range, and run the `metaMDS` function.
+```{r}
+nmds_stats_late.r <- decostand(nmds_stats_late[4:ncol(nmds_stats_late)], method="range",MARGIN=2)
+late.nmds <- metaMDS(comm=nmds_stats_late.r,autotransform=FALSE,distance="euclidean")
+```
+```{r echo=FALSE}
+stressplot(late.nmds)
+```
+**The stress is:`r round(late.nmds$stress,5)`**
+<br>
+
+## 2.3. Fig. S1
+
+Graph the ordinations. Note: you will get a warning message from the `ggord` function about replacing the existing scale for shape. Ignore it!
+
+The early season, fill by port group:
+```{r}
+nmds_stats_early <- nmds_stats_early %>%
+  ## replace codes with names
+  mutate(pcgroup_name = recode(nmds_stats_early$pcgroup, 
+                               CCA="Crescent City", ERA="Eureka",
+                               BGA="Fort Bragg", BDA="Bodega Bay",
+                               SFA="San Francisco",
+                               MRA="Morro Bay",
+                               MNA="Monterey")) %>%
+  ## assign expected north / central, add in NMDS scores
+  mutate(Region=ifelse(pcgroup_name %in% c("Crescent City","Eureka","Fort Bragg","Bodega Bay"), "North","Central"),
+         port_group=ifelse(pcgroup_name=="Bodega Bay","Bodega Bay","Other"),
+         one = early.nmds$points[,1,drop=TRUE], 
+         two = early.nmds$points[,2,drop=TRUE])
+
+## plot ordination
+e.ordp <- ggord(ord_in=early.nmds, grp_in=nmds_stats_early$pcgroup_name, ellipse_pro=c(0.10,0.90),
+      cols=pnw_palette(name="Sunset",n=7,type="discrete"),arrow=NULL,vec_lab="") +
+  scale_shape_manual('Groups', values = c(16,16,16,17,16,16,16)) +
+  theme(panel.grid.major=element_blank(),panel.grid.minor=element_blank(),
+        axis.text=element_blank(),legend.title = element_blank(), legend.text=element_text(size=16),
+        legend.position = "bottom")
+```
+<br>
+
+The early season, fill by region:
+```{r}
+nmds_stats_early$port_group <- factor(nmds_stats_early$port_group,levels=c("Other","Bodega Bay"))
+
+# create ggord and remove points layer
+e.ord <- ggord(ord_in=early.nmds, grp_in=nmds_stats_early$Region, ellipse_pro=c(0.10,0.90), cols=c("#41476b","#de9b71"), arrow=NULL,vec_lab="")
+e.ord$layers[[1]] <- NULL
+
+# new point scales
+e.ordr <- e.ord + geom_point(data = nmds_stats_early, aes(shape = port_group, colour = Region, group = Region), size= 4, alpha = 0.7) + 
+  scale_shape_manual(values = c(1, 17)) + 
+  guides(fill = guide_legend(override.aes= list(shape = NA))) + 
+  theme(legend.title = element_blank(), legend.text=element_text(size=16),
+        legend.position = "bottom",
+        panel.grid.major=element_blank(),panel.grid.minor=element_blank(),
+        axis.text=element_blank(), axis.ticks=element_blank())
+```
+<br>
+
+The late season, fill by port group:
+```{r}
+nmds_stats_late <- nmds_stats_late %>%
+  ## replace codes with names
+  mutate(pcgroup_name = recode(nmds_stats_late$pcgroup, 
+                               CCA="Crescent City", ERA="Eureka",
+                               BGA="Fort Bragg", BDA="Bodega Bay",
+                               SFA="San Francisco",
+                               MRA="Morro Bay",
+                               MNA="Monterey")) %>%
+  ## assign expected north / central, add in NMDS scores
+  mutate(Region=ifelse(pcgroup_name %in% c("Crescent City","Eureka","Fort Bragg","Bodega Bay"), "North","Central"),
+         port_group=ifelse(pcgroup_name=="Bodega Bay","Bodega Bay","Other"),
+         one = late.nmds$points[,1,drop=TRUE], 
+         two = late.nmds$points[,2,drop=TRUE])
+
+## plot ordination
+l.ordp <- ggord(ord_in=late.nmds, grp_in=nmds_stats_late$pcgroup_name, ellipse_pro=c(0.10,0.90),
+      cols=pnw_palette(name="Sunset",n=7,type="discrete"),arrow=NULL,vec_lab="",alpha_el=0.45) +
+  scale_shape_manual('Groups', values = c(16,16,16,17,16,16,16)) +
+  theme(panel.grid.major=element_blank(),panel.grid.minor=element_blank(),
+        axis.text=element_blank(),legend.position="none")
+```
+<br>
+
+The late season, fill by region:
+```{r}
+nmds_stats_late$port_group <- factor(nmds_stats_late$port_group,levels=c("Other","Bodega Bay"))
+
+# create ggord and remove points layer
+l.ord <- ggord(ord_in=late.nmds, grp_in=nmds_stats_late$Region, ellipse_pro=c(0.10,0.90), cols=c("#41476b","#de9b71"), arrow=NULL,vec_lab="")
+l.ord$layers[[1]] <- NULL
+
+# new point scales
+l.ordr <- l.ord + geom_point(data = nmds_stats_late, aes(shape = port_group, colour = Region, group = Region), size= 4, alpha = 0.7) + 
+  scale_shape_manual(values = c(1, 17)) + 
+  guides(fill = guide_legend(override.aes= list(shape = NA))) + 
+  theme(legend.position="none",
+        panel.grid.major=element_blank(),panel.grid.minor=element_blank(),
+        axis.text=element_blank(), axis.ticks=element_blank())
+```
+
+
+Figure S1. 
+```{r}
+plot_grid(e.ordp,l.ordp,nrow=2,rel_heights=c(0.77,1),labels=c("a","c"),label_size=18)
+plot_grid(e.ordr,l.ordr,nrow=2,labels=c("a","c"),rel_heights=c(1,0.69))
+
+png(here::here("results/figures","FigureS1_ac.png"),height=480,width=500)
+print(plot_grid(e.ordp,l.ordp,nrow=2,rel_heights=c(1,0.74),labels=c("a","c"),label_size=18))
+dev.off()
+
+png(here::here("results/figures","FigureS1_bd.png"),height=480,width=500)
+print(plot_grid(e.ordr,l.ordr,nrow=2,labels=c("b","d"),rel_heights=c(1,0.77),label_size=18))
+dev.off()
+```
+<br>
+
+
+# 3: Spearman Rank Correlation Test
 
 This function runs the correlation test on the data for each region within each season. It takes a data frame with 4 columns: period, region, network size (N) and the statistics of interest.
 
@@ -157,11 +317,11 @@ write.csv(spearman_dat, here::here(indir,testfile))
 <br>
 
 
-# 3: Graph Network Statistics
+# 4: Graph Network Statistics
 
 This section has hard-coded the network metrics for graphing; if you want to use any metrics not included in Fisher et al., you will need to manually edit the following code.
 
-## 3.1. Figure S2
+## 4.1. Figure S2
 
 Calculate the yearly average for each metric, for each region / season. Fix the metric names.
 ```{r}
@@ -252,7 +412,7 @@ dev.off()
 ```
 <br>
 
-## 3.1. Figure S3
+## 4.2. Figure S3
 
 Pre-shock averages of each metric during the early and late seasons.
 ```{r}
@@ -322,7 +482,7 @@ dev.off()
 <br>
 
 
-## 3.2. Figure S4
+## 4.3. Figure S4
 
 Match the closure duration data with the network metrics data. Then categorize the closure duration, into no closure (0 days; "none"), a mid-duration closure (< 50 days; "medium"), and a high duration closure (> 50 days; "high").
 ```{r}
