--- a/scripts/09b_directed_vessel_network_late.Rmd
+++ b/scripts/09b_directed_vessel_network_late.Rmd
@@ -49,9 +49,11 @@ if(!require("gridExtra")) {install.packages("gridExtra")}
 
 And calls the following functions:
 ```{r}
-source("R/directed_network_matrix_late.R")
-source("R/directed_network_collapse_confidential_late.R")
-source("R/color_network_nodes.R")
+source(here::here("R","directed_network_matrix_late.R"))
+source(here::here("R","directed_network_collapse_confidential_late.R"))
+source(here::here("R","collapse_confidential_matrix_rows.R"))
+source(here::here("R","fill_adjacency_matrix.R"))
+source(here::here("R","color_network_nodes.R"))
 ```
 <br>
 
@@ -85,7 +87,7 @@ self = TRUE
 ```
 <br>
 
-Do you want to save the confidential adjacency matrix? This will include all fishing activity, including fisheries with < 3 participating vessels.
+Do you want to save the confidential adjacency matrix? This will include all fishing activity, including fisheries with < 3 participating vessels. **If you are going to collapse confidential nodes into a non-confidential network object, you need to save the confidential adjacency matrix**
 ```{r}
 save_con=TRUE
 ```
@@ -199,12 +201,12 @@ for(p in myports){
   
   ## CREATE ADJACENCY MATRIX ##
   A_info <- gen_adj_matrix_late(fishtix_lg,p=p,self=self,write=save_con,outdir=outdir,size="large",noncrab_fishtix=noncrab_tix)
-  A_lg <- A_info[[1]]; nv_lg <- A_info[[2]]; vpf_2014_lg <- A_info[[3]]; vpf_2015_lg <- A_info[[4]]
+  A_lg <- A_info[[1]]; nv_lg <- A_info[[2]]
   # how many vessels?
   cat("Number large vessels at ",p,": ",nv_lg,".\n")
   
   A_info_sm <- gen_adj_matrix_late(fishtix_sm,p=p,self=self,write=save_con,outdir=outdir,size="small",noncrab_fishtix=noncrab_tix)
-  A_sm <- A_info_sm[[1]]; nv_sm <- A_info_sm[[2]]; vpf_2014_sm <- A_info_sm[[3]]; vpf_2015_sm <- A_info_sm[[4]]
+  A_sm <- A_info_sm[[1]]; nv_sm <- A_info_sm[[2]]
   # how many vessels?
   cat("Number small vessels at ",p,": ",nv_sm,".\n")
   
@@ -212,12 +214,19 @@ for(p in myports){
   ## Graph ##
   i=1
   
-  for(a in list(A_info,A_info_sm)){
-    A <- a[[1]]; nv <- a[[2]]; vpf_2014 <- a[[3]]; vpf_2015 <- a[[4]]
+  for(a in list(A_lg,A_sm)){
+    A <- a
     print(A)
     
+    # read in the confidential vessel matrix for the collapse_confidential_late function
+    if(i==1){
+      vmat <- here::here(outdir,paste0(p,"_late_Amatrix_large.csv"),row.names=1)
+    } else{
+      vmat <- here::here(outdir,paste0(p,"_late_Amatrix_small.csv"),row.names=1)
+    }
+    
     # collapse confidential movement out of d.crab
-    newdat <- collapse_confidential_late(A=A,vpf_2014=vpf_2014,vpf_2015=vpf_2015)   
+    newdat <- collapse_confidential_late(A=A,vessel_matrix=as.matrix(vmat), default_other=2)   
     
     A <- newdat[[1]]
     vpf_2014 <- newdat[[2]]
@@ -252,7 +261,7 @@ for(p in myports){
     vpf14 <- vpf14[V(g)$name,]
     V(g)$size14 <- vpf14
     
-    # Filter
+    # Filter - some of this is deprecated from old collapse_confidential function
     rm_2014 <- names(which(vpf_2014 < 3))
     rm_2015 <- names(which(vpf_2015 < 3))
     metiers_rm <- rm_2014[which(rm_2014 %in% rm_2015)]
@@ -333,7 +342,7 @@ Sys.time() - script_start_time
 <br>
 <br>
 
-*Code from v8 original script.*
+*Code from v8 original script. Updates on 10/30 correspond to v9 original script.*
 
 
 
