--- a/scripts/figures/Fig3.Rmd
+++ b/scripts/figures/Fig3.Rmd
@@ -12,6 +12,9 @@ Graph the directed networks which show flow of Dungeness crab vessels between fi
 
 For more details on how directed vessel networks are built and interpreted, see the [Guide to Directed Networks](https://github.com/mfisher5/ParticipationNetworks/blob/master/doc/Guide_To_Directed_Networks.md) on Github.
 
+There are several different ways to graph the directed networks:
+
+
 
 ```{r setup, include=FALSE}
 if(!require("here")) {install.packages("here")}
@@ -38,9 +41,10 @@ if(!require("gridExtra")) {install.packages("gridExtra")}
 
 And calls the following functions:
 ```{r}
-source("R/rename_network_nodes.R")
-source("R/graph_directed_network_early.R")
-source("R/color_network_nodes.R")
+source(here::here("R","graph_directed_network_early.R"))
+source(here::here("R","graph_directed_network_early_coords_image.R"))
+source(here::here("R","color_network_nodes.R"))
+source(here::here("R","rename_network_nodes.R"))
 ```
 <br>
 
@@ -55,10 +59,24 @@ indir <- 'data/networks/vessel_flow'
 
 Identify the port groups that you would like to produce networks for. The port groups vector should include only those port groups which have associated `igraph` objects. Also list out the full names of the ports, so that names are used instead of codes on the figure.
 ```{r}
-myports <- c("CCA", "ERA", "BGA", "BDA", "SFA", "MRA", "MNA")
+myports <- c("CCA", "ERA", "BGA", "BDA", "SFA", "MNA", "MRA")
 portnames <- c("Crescent City", "Eureka", "Fort Bragg", "Bodega Bay", "San Francisco", "Monterey", "Morro Bay")
 ```
 <br>
+
+Provide the name of the `.png` for the Dungeness crab network node.
+```{r}
+img_file <- here::here("input_data","crab_resized.png")
+```
+```{r include=FALSE, eval=FALSE}
+## when writing out the plot, it may distort the image. Use this code to adjust image aspect ##
+## the image_aspect argument in the function only works within R, not when saving to a file ##
+## this is a weird thing that needs to be solved in the geom_image() source code ##
+img <- imager::load.image(here::here("input_data","crab.png"))
+img_resize <- resize(img,round(width(img)/2.1),round(height(img)))
+save.image(img_resize, here::here("input_data","crab_resized.png"), quality = 0.7)
+```
+
 
 
 
@@ -84,19 +102,23 @@ names(graphs_list) <- list_names
 ```
 <br>
 
-## With D. crab node labeled
+The function `plot_directed_early` can produce the different plot types listed at the beginning of the script. The following sections use different function calls to produce each plot type.
+
+## D. crab node labeled
+
+This version of the plotting function applies the default vertical node locations produced by `ggraph`, and labels the Dungeness crab node on the graph with text.
 
 Apply the plotting function to all of the graphs in the list.
 ```{r}
-myplots <- lapply(graphs_list, plot_directed_early)
+myplots <- lapply(graphs_list, plot_directed_early, crab_image=FALSE, x_coords=FALSE)
 ```
 <br>
 
 Create Figure 3, with column and x axis titles.
-```{r}
+```{r eval=FALSE}
 col.titles=c("Large","Small")
 ylabel="2015                                      2016"
-png(here::here("results/figures","Figure3.png"), width=1800,height=3000,res=200)
+png(here::here("results/figures","Figure3_base.png"), width=1800,height=3000,res=200)
 grid.arrange(grobs=lapply(c(1,2), function(i) {
   arrangeGrob(grobs=myplots[seq(i,14,by=2)], top=textGrob(col.titles[i],gp=gpar(fontsize=22)), 
               bottom=textGrob(ylabel,gp=gpar(fontsize=18)),
@@ -106,99 +128,18 @@ dev.off()
 ```
 <br>
 
-# With D. crab node as icon
-```{r}
-plot_directed_early = function (g) {
-  ####### for all graphs ######
-  # save the port group
-  p=unique(V(g)$port) # port group
-  # color the network nodes
-  V(g)$color <- vertex_color(g) # node colors
-  # remove any nodes with size of 0 in 2015 (except for Dungeness crab)
-  g <- delete.vertices(g, V(g)[which(V(g)$size==0 & V(g)$name != "DCRB_POT")])
-  
-  ## get node sizes, and reset 2015 d.crab node size to the 2014 participation
-  dcrb_node <- which(V(g)$name=="DCRB_POT")
-  vsizes=V(g)$size
-  vsizes[dcrb_node] = V(g)$size14[dcrb_node]
-  
-  # to plot vertices with only self loops on the left side of the graph
-  self_only <- c()
-  self_g = delete.edges(g,E(g)[!(which_loop(g))])
-  self_loops <- as_edgelist(self_g)[,1]
-  
-  # set the 'y' axis locations of each node. This also requires you to set the start and end of the edges. 
-  node.y <- unlist(lapply(V(g)$name,FUN=function(i){ifelse(i %in% c("DCRB_POT",self_only), 1,ifelse(i %in% self_loops, 0.1,0))}))
-  edge.y <- unlist(lapply(as_edgelist(g)[,1],FUN=function(i){ifelse(i %in% c("DCRB_POT",self_only), 1,ifelse(i %in% self_loops, 0.1,0))}))
-  edge.yend <- unlist(lapply(as_edgelist(g)[,2],FUN=function(i){ifelse(i %in% c("DCRB_POT",self_only), 1,ifelse(i %in% self_loops, 0.1,0))}))
-  node.y.lab <- unlist(lapply(V(g)$name,FUN=function(i){ifelse(i %in% c("DCRB_POT",self_only), 1.2,ifelse(i %in% self_loops, -0.5,-0.5))}))
-  
-  # crab node location
-  crab_node <- data.frame(x=-0.5, y=1, crab_image=here::here('data/input', 'crab_icon_NWFSCgraphics.png'))
-  # empty crab node common name so it isn't labeled on the graph
-  V(g)$common_name[which(V(g)$common_name=="D.crab")] <- ""
-  
-  ####### small / large vessel graphs ######
-  # save the size category
-  s=unique(V(g)$vsize)
-  s=ifelse(s=="large","Large","Small")
-  # the graph will be labeled with the port group, for large vessels (on left of combined graph)
-  if(s=="Large"){ylabel=p} else{ylabel=""}
-  
-  ### if none of the vertices have self-loops ###
-  if(ecount(self_g) < 1){
-    ggraph(g, 'igraph', algorithm = 'tree') + 
-      geom_edge_diagonal(aes(y=edge.y,yend=edge.yend,width=sqrt((E(g)$weight))), 
-                         color="grey85",end_cap = circle(0.5),arrow=arrow(length=unit(0.3,'cm'))) +
-      geom_node_point(aes(y=node.y),color=factor(V(g)$color),
-                      size=12*sqrt(vsizes)/sqrt(max(vsizes))) +
-      geom_node_text(aes(y=node.y.lab,label = common_name), size=5) +
-      geom_image(data=crab_node, aes(x=x,y=y,image=crab_image), size = 0.25, by="width") +
-      scale_size_identity() +
-      #annotate("text", x = 1.35, y = 0.5, label = paste0(s," Vessels"), size=4) +
-      xlab(ylabel) +
-      xlim(c(-2.7,2.7)) +
-      # ylim(c(-0.05,1.1)) +
-      theme_void() +
-      theme(legend.position="none", 
-            axis.title.y=element_text(angle=90,size=20,hjust=0.5),
-            panel.border = element_rect(colour = "black", fill=NA, size=1)) +
-      coord_flip() +
-      scale_y_reverse(expand=expansion(add=c(0.5,1)))
-    ### if 1+ vertices have self-loops ###
-  } else{
-    ggraph(g, 'igraph', algorithm = 'tree') + 
-      geom_edge_diagonal(aes(y=edge.y,yend=edge.yend,width=sqrt((E(g)$weight))), 
-                         color="grey85",end_cap = circle(0.5),arrow=arrow(length=unit(0.3,'cm'))) +
-      geom_edge_loop(aes(y=edge.y,width=sqrt((E(g)$weight)), span=50,direction=0,strength=0.90), color="grey85") +
-      geom_node_point(aes(y=node.y),color=factor(V(g)$color),
-                      size=12*sqrt(vsizes)/sqrt(max(vsizes))) +
-      geom_node_text(aes(y=node.y.lab,label = common_name), size=5) +
-      geom_image(data=crab_node, aes(x=x,y=y,image=crab_image), size = 0.25, by="width") +
-      scale_size_identity() +
-      xlab(ylabel) +
-      xlim(c(-2.7,2.7)) +
-      # ylim(c(-0.09,1.15)) +
-      theme_void() +
-      theme(legend.position="none", 
-            axis.title.y=element_text(angle=90,size=20,hjust=0.5),
-            panel.border = element_rect(colour = "black", fill=NA, size=1)) +
-      coord_flip() +
-      scale_y_reverse(expand=expansion(add=c(0.15,1)))
-  }
-}
-```
-<br>
+## D. crab node icon
 
+This version of the plotting function applies the default vertical node locations produced by `ggraph`, and labels the Dungeness crab node on the graph with an image of a crab outline. 
 
 Apply the plotting function to all of the graphs in the list.
 ```{r}
-myplots <- lapply(graphs_list, plot_directed_early)
+myplots <- lapply(graphs_list, plot_directed_early, crab_image=TRUE, image_object=img_file, image_size=0.1, image_aspect=1.2, image_offset=0.4, image_transparent=FALSE)
 ```
 <br>
 
 Create Figure 3, with column and x axis titles.
-```{r}
+```{r eval=FALSE}
 col.titles=c("Large","Small")
 ylabel="2015                                      2016"
 png(here::here("results/figures","Figure3_icon.png"), width=1800,height=3000,res=200)
@@ -211,94 +152,139 @@ dev.off()
 ```
 
 
----
 
-`r Sys.time() - script_start_time`
+## Fixed node positions
 
+This version of the plotting function manually assigns vertical node locations rather than using the ones produced by `ggraph`; this helps maintain consistency in node positions across different graphs, and prevents node / edge overlap. 
 
-
+Apply the plotting function to all of the graphs in the list.
 ```{r}
-crab_image <- readPNG(here::here('data/input', 'crab_icon_NWFSCgraphics.png'))
-g <- graphs_list[[1]]
-  
-  ####### for all graphs ######
-  # save the port group
-  p=unique(V(g)$port) # port group
-  # color the network nodes
-  V(g)$color <- vertex_color(g) # node colors
-  # remove any nodes with size of 0 in 2015 (except for Dungeness crab)
-  g <- delete.vertices(g, V(g)[which(V(g)$size==0 & V(g)$name != "DCRB_POT")])
-  
-  ## get node sizes, and reset 2015 d.crab node size to the 2014 participation
-  dcrb_node <- which(V(g)$name=="DCRB_POT")
-  vsizes=V(g)$size
-  vsizes[dcrb_node] = V(g)$size14[dcrb_node]
-  
-  # to plot vertices with only self loops on the left side of the graph
-  self_only <- c()
-  self_g = delete.edges(g,E(g)[!(which_loop(g))])
-  self_loops <- as_edgelist(self_g)[,1]
-  
-  # set the 'y' axis locations of each node. This also requires you to set the start and end of the edges. 
-  node.y <- unlist(lapply(V(g)$name,FUN=function(i){ifelse(i %in% c("DCRB_POT",self_only), 1,ifelse(i %in% self_loops, 0.1,0))}))
-  edge.y <- unlist(lapply(as_edgelist(g)[,1],FUN=function(i){ifelse(i %in% c("DCRB_POT",self_only), 1,ifelse(i %in% self_loops, 0.1,0))}))
-  edge.yend <- unlist(lapply(as_edgelist(g)[,2],FUN=function(i){ifelse(i %in% c("DCRB_POT",self_only), 1,ifelse(i %in% self_loops, 0.1,0))}))
-  node.y.lab <- unlist(lapply(V(g)$name,FUN=function(i){ifelse(i %in% c("DCRB_POT",self_only), 1.2,ifelse(i %in% self_loops, -0.5,-0.5))}))
-  
-  # crab node location
-  crab_node <- data.frame(x=-0.5, y=1, crab_image=here::here('data/input', 'crab_icon_NWFSCgraphics.png'))
-  # empty crab node common name so it isn't labeled on the graph
-  V(g)$common_name[which(V(g)$common_name=="D.crab")] <- ""
-  
-  ####### small / large vessel graphs ######
-  # save the size category
-  s=unique(V(g)$vsize)
-  s=ifelse(s=="large","Large","Small")
-  # the graph will be labeled with the port group, for large vessels (on left of combined graph)
-  if(s=="Large"){ylabel=p} else{ylabel=""}
-  
-  ### if none of the vertices have self-loops ###
-  if(ecount(self_g) < 1){
-    ggraph(g, 'igraph', algorithm = 'tree') + 
-      geom_edge_diagonal(aes(y=edge.y,yend=edge.yend,width=sqrt((E(g)$weight))), 
-                         color="grey85",end_cap = circle(0.5),arrow=arrow(length=unit(0.3,'cm'))) +
-      geom_node_point(aes(y=node.y),color=factor(V(g)$color),
-                      size=12*sqrt(vsizes)/sqrt(max(vsizes))) +
-      geom_node_text(aes(y=node.y.lab,label = common_name), size=5) +
-      geom_image(data=crab_node, aes(x=x,y=y,image=crab_image), size=0.5) +
-      #annotate("text", x = 1.35, y = 0.5, label = paste0(s," Vessels"), size=4) +
-      xlab(ylabel) +
-      xlim(c(-2.7,2.7)) +
-      # ylim(c(-0.05,1.1)) +
-      theme_void() +
-      theme(legend.position="none", 
-            axis.title.y=element_text(angle=90,size=20,hjust=0.5),
-            panel.border = element_rect(colour = "black", fill=NA, size=1)) +
-      coord_flip() +
-      scale_y_reverse(expand=expansion(add=c(0.5,1)))
-    ### if 1+ vertices have self-loops ###
+myplots <- lapply(graphs_list, plot_directed_early, x_coords=TRUE, crab_image=FALSE, dist_y=1.2)
+```
+<br>
+
+Create Figure 3, with column and x axis titles.
+```{r eval=FALSE}
+col.titles=c("Large","Small")
+ylabel="2015                                      2016"
+png(here::here("results/figures","Figure3_coords.png"), width=1800,height=3000,res=200)
+grid.arrange(grobs=lapply(c(1,2), function(i) {
+  arrangeGrob(grobs=myplots[seq(i,14,by=2)], top=textGrob(col.titles[i],gp=gpar(fontsize=22)), 
+              bottom=textGrob(ylabel,gp=gpar(fontsize=18)),
+              ncol=1)
+}), ncol=2)
+dev.off()
+```
+
+
+
+## Fixed node positions, D. crab icon
+
+This is the version of Figure 3 used in Fisher et al. The plotting function manually assigns vertical node locations, and uses the crab outline image to label the Dungeness crab node. While Fisher et al. did not adjust the transparency of the image, it is possible to do so using this function. 
+
+Apply the plotting function to all of the graphs in the list. The plotting function can be called through the generic `plot_directed_early`, or directly. 
+```{r}
+myplots <- lapply(graphs_list, plot_directed_early_coords_image, dist_y=1.1, image_object=img_file, image_size=0.13, image_aspect=1.2, image_offset=0.3, image_transparent=FALSE)
+```
+<br>
+
+Create Figure 3, with column and x axis titles.
+```{r}
+col.titles=c("Large","Small")
+ylabel="2015                                      2016"
+
+png(here::here("drafts/figures","Figure3.png"), width=1800,height=2500,res=200)
+grid.arrange(grobs=lapply(c(1,2), function(i) {
+  arrangeGrob(grobs=myplots[seq(i,14,by=2)], top=textGrob(col.titles[i],gp=gpar(fontsize=22)), 
+              bottom=textGrob(ylabel,gp=gpar(fontsize=18)),
+              ncol=1)
+}), ncol=2)
+dev.off()
+```
+<br>
+
+### Save Directed Network with Legend
+
+Create a data frame with gear type and corresponding color key. Use simple x/y coordinates to create a legend key with ggplot.
+```{r}
+gear_legend <- data.frame(gear=c("Pot","Hook & Line","Pot/Hook & Line","Trawl","Shrimp Trawl", "Other"),
+           colorkey=c("darkorange2","darkgoldenrod1","tan1","chocolate4","hotpink","plum3"),
+           x=rep(1,6),
+           y=c(6,5,4,3,2,1))
+
+legend_plot <- ggplot(gear_legend, aes(x=x,y=y)) +
+  geom_point(size=4,col=gear_legend$colorkey) +
+  geom_text(aes(x=x,y=y,label=gear), hjust=0, vjust=0.5, nudge_x=0.05, size=6) +
+  xlim(c(1,2)) +
+  theme_void()
+legend_plot
+```
+<br>
+
+Split up the large and small vessel plots (n=7 each), then save them each in a single column with vessel size at the top, and the 2015/2016 labels at the bottom (saved as a "grob") 
+```{r}
+lg_plots <- list()
+sm_plots <- list()
+s=1
+l=1
+for(i in seq(1,14)){
+  if(i%%2==0){
+    sm_plots[[s]] <- myplots[[i]]
+    s=s+1
   } else{
-    ggraph(g, 'igraph', algorithm = 'tree') + 
-      geom_edge_diagonal(aes(y=edge.y,yend=edge.yend,width=sqrt((E(g)$weight))), 
-                         color="grey85",end_cap = circle(0.5),arrow=arrow(length=unit(0.3,'cm'))) +
-      geom_edge_loop(aes(y=edge.y,width=sqrt((E(g)$weight)), span=50,direction=0,strength=0.90), color="grey85") +
-      geom_node_point(aes(y=node.y),color=factor(V(g)$color),
-                      size=12*sqrt(vsizes)/sqrt(max(vsizes))) +
-      geom_node_text(aes(y=node.y.lab,label = common_name), size=5) +
-      geom_image(data=crab_node, aes(x=x,y=y,image=crab_image), size=0.07) +
-      xlab(ylabel) +
-      xlim(c(-2.7,2.7)) +
-      # ylim(c(-0.09,1.15)) +
-      theme_void() +
-      theme(legend.position="none", 
-            axis.title.y=element_text(angle=90,size=20,hjust=0.5),
-            panel.border = element_rect(colour = "black", fill=NA, size=1)) +
-      coord_flip() +
-      scale_y_reverse(expand=expansion(add=c(0.15,1)))
+    lg_plots[[l]] <- myplots[[i]]
+    l=l+1
   }
 }
-plot_directed_early(graphs_list[[1]])
+
+ylabel="2015                  2016"
+grob1 <- arrangeGrob(grobs=lg_plots, top=textGrob("Large",gp=gpar(fontsize=22)), 
+              bottom=textGrob(ylabel,gp=gpar(fontsize=18)),
+              ncol=1)
+grob2 <- arrangeGrob(grobs=sm_plots, top=textGrob("Small",gp=gpar(fontsize=22)), 
+              bottom=textGrob(ylabel,gp=gpar(fontsize=18)),
+              ncol=1)
 ```
+<br>
+
+Save the legend plot into a column as well, with blank plots beneath it (saved as "grob") and a blank title at the top to adjust the start of the legend to the top of the network graphs.
+```{r}
+blank_plot <- ggplot() + theme_void()
+grob3 <- arrangeGrob(grobs=list(legend_plot,blank_plot,blank_plot,blank_plot,blank_plot), top=textGrob("",gp=gpar(fontsize=22)), ncol=1)
+```
+<br>
+
+Save the 3 columns into a single image, with the legend to the right of the network graphs.
+```{r}
+png(here::here("drafts/figures","Figure3_test.png"), width=2200,height=2500,res=200)
+grid.arrange(grobs = list(grob1,grob2,grob3), ncol=3, widths=c(1,1,0.5))
+dev.off()
+```
+<br>
+
+### Save Wide Format Directed Network
+
+Create a data frame with gear type and corresponding color key. Use simple x/y coordinates to create a legend key with ggplot.
+```{r}
+gear_legend_wide <- data.frame(gear=c("Pot","Shrimp Trawl","Pot/Hook & Line","Trawl","Hook & Line", "Other"),
+           colorkey=c("darkorange2","hotpink","tan1","chocolate4","darkgoldenrod1","plum3"),
+           x=c(rep(1,2),rep(2,2),rep(3,2)),
+           y=rep(c(2,1),3))
+
+legend_plot_wide <- ggplot(gear_legend_wide, aes(x=x,y=y)) +
+  geom_point(size=4,col=gear_legend_wide$colorkey) +
+  geom_text(aes(x=x,y=y,label=gear), hjust=0, vjust=0.5, nudge_x=0.05, size=6) +
+  xlim(c(1,4)) +
+  ylim(c(0,3)) +
+  theme_void()
+legend_plot_wide
+```
+
+
+---
+
+Script run time: `r Sys.time() - script_start_time`
+
 <br>
 
 
